alignment fixes for 2019/2020 themes and changign spacing class to px instead of em

--- a/src/blocks/block-column-container/styles/style.scss
+++ b/src/blocks/block-column-container/styles/style.scss
@@ -68,43 +68,43 @@ div[data-type="c9-blocks/c9-column"],
 }
 
 .c9-block-layout-column-gap-1 {
-	grid-gap: 0 1em;
+	grid-gap: 0 10px;
 }
 
 .c9-block-layout-column-gap-2 {
-	grid-gap: 0 2em;
+	grid-gap: 0 20px;
 }
 
 .c9-block-layout-column-gap-3 {
-	grid-gap: 0 3em;
+	grid-gap: 0 30px;
 }
 
 .c9-block-layout-column-gap-4 {
-	grid-gap: 0 4em;
+	grid-gap: 0 40px;
 }
 
 .c9-block-layout-column-gap-5 {
-	grid-gap: 0 5em;
+	grid-gap: 0 50px;
 }
 
 .c9-block-layout-column-gap-6 {
-	grid-gap: 0 6em;
+	grid-gap: 0 60px;
 }
 
 .c9-block-layout-column-gap-7 {
-	grid-gap: 0 7em;
+	grid-gap: 0 70px;
 }
 
 .c9-block-layout-column-gap-8 {
-	grid-gap: 0 8em;
+	grid-gap: 0 80px;
 }
 
 .c9-block-layout-column-gap-9 {
-	grid-gap: 0 9em;
+	grid-gap: 0 90px;
 }
 
 .c9-block-layout-column-gap-10 {
-	grid-gap: 0 10em;
+	grid-gap: 0 100px;
 }
 
 /* Grid column classes. */
@@ -155,14 +155,14 @@ div[data-type="c9-blocks/c9-column"],
 
 /* One column grid. */
 
-.c9-layout-columns-1 > .c9-layout-column-wrap {
+.c9-layout-columns-1>.c9-layout-column-wrap {
 	grid-template-columns: 1fr;
 	grid-template-areas: "col1";
 }
 
 /* Two column grid. */
 
-.c9-layout-columns-2 > .c9-layout-column-wrap {
+.c9-layout-columns-2>.c9-layout-column-wrap {
 	grid-template-columns: 1fr 1fr;
 	grid-template-areas: "col1 col2";
 
@@ -176,17 +176,17 @@ div[data-type="c9-blocks/c9-column"],
 	}
 }
 
-.c9-2-col-wideleft > .c9-layout-column-wrap {
+.c9-2-col-wideleft>.c9-layout-column-wrap {
 	grid-template-columns: 2fr 1fr;
 }
 
-.c9-2-col-wideright > .c9-layout-column-wrap {
+.c9-2-col-wideright>.c9-layout-column-wrap {
 	grid-template-columns: 1fr 2fr;
 }
 
 /* Three column grid. */
 
-.c9-layout-columns-3 > .c9-layout-column-wrap {
+.c9-layout-columns-3>.c9-layout-column-wrap {
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-template-areas: "col1 col2 col3";
 
@@ -201,7 +201,7 @@ div[data-type="c9-blocks/c9-column"],
 	}
 }
 
-.c9-3-col-widecenter > .c9-layout-column-wrap {
+.c9-3-col-widecenter>.c9-layout-column-wrap {
 	grid-template-columns: 1fr 2fr 1fr;
 
 	&.c9-is-responsive-column {
@@ -211,7 +211,7 @@ div[data-type="c9-blocks/c9-column"],
 	}
 }
 
-.c9-3-col-wideleft > .c9-layout-column-wrap {
+.c9-3-col-wideleft>.c9-layout-column-wrap {
 	grid-template-columns: 2fr 1fr 1fr;
 
 	&.c9-is-responsive-column {
@@ -221,7 +221,7 @@ div[data-type="c9-blocks/c9-column"],
 	}
 }
 
-.c9-3-col-wideright > .c9-layout-column-wrap {
+.c9-3-col-wideright>.c9-layout-column-wrap {
 	grid-template-columns: 1fr 1fr 2fr;
 
 	&.c9-is-responsive-column {
@@ -233,7 +233,7 @@ div[data-type="c9-blocks/c9-column"],
 
 /* Four column grid. */
 
-.c9-layout-columns-4 > .c9-layout-column-wrap {
+.c9-layout-columns-4>.c9-layout-column-wrap {
 	grid-template-columns: 1fr 1fr 1fr 1fr;
 	grid-template-areas: "col1 col2 col3 col4";
 
@@ -257,17 +257,17 @@ div[data-type="c9-blocks/c9-column"],
 	}
 }
 
-.c9-4-col-wideleft > .c9-layout-column-wrap {
+.c9-4-col-wideleft>.c9-layout-column-wrap {
 	grid-template-columns: 2fr 1fr 1fr 1fr;
 }
 
-.c9-4-col-wideright > .c9-layout-column-wrap {
+.c9-4-col-wideright>.c9-layout-column-wrap {
 	grid-template-columns: 1fr 1fr 1fr 2fr;
 }
 
 /* Five column grid. */
 
-.c9-layout-columns-5 > .c9-layout-column-wrap {
+.c9-layout-columns-5>.c9-layout-column-wrap {
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	grid-template-areas: "col1 col2 col3 col4 col5";
 
@@ -284,7 +284,7 @@ div[data-type="c9-blocks/c9-column"],
 	}
 }
 
-.c9-layout-columns-6 > .c9-layout-column-wrap {
+.c9-layout-columns-6>.c9-layout-column-wrap {
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 	grid-template-areas: "col1 col2 col3 col4 col5 col6";
 
@@ -343,6 +343,7 @@ div[data-type="c9-blocks/c9-column"],
 }
 
 @media only screen and (max-width: 768px) {
+
 	.c9-layout-columns-6 .c9-is-responsive-column .c9-column,
 	.c9-layout-columns-5 .c9-is-responsive-column .c9-column,
 	.c9-layout-columns-4 .c9-is-responsive-column .c9-column,
@@ -367,6 +368,7 @@ div[data-type="c9-blocks/c9-column"],
 }
 
 @media only screen and (max-width: 667px) {
+
 	.c9-layout-columns-6 .c9-is-responsive-column .c9-column:nth-child(3),
 	.c9-layout-columns-6 .c9-is-responsive-column .c9-column:nth-child(5),
 	.c9-layout-columns-4 .c9-is-responsive-column .c9-column:nth-child(3),
